...
    },
    "Done": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Готово"
          }
        }
      }
    },
    "Setup steps": {
      "localizations": {
...
